--- a/src/scss/abstracts/_boilerplate.scss
+++ b/src/scss/abstracts/_boilerplate.scss
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+body{ 
+    font-family: 'Rubik', sans-serif;
+    overflow-x: hidden;
+}
+
 ul{ 
     list-style: none;
 }
@@ -14,6 +19,7 @@ button{
     cursor: pointer;
     border: 0;
     font: inherit;
+    background-color: transparent;
 }
 
 a{ 
@@ -23,4 +29,13 @@ a{
 
 h1,h2,h3,h4,h5,h6,p{ 
     margin: 0;
+}
+
+section img{ 
+    max-width: 100%;
+}
+
+label, input{ 
+    display: block;
+    width: 100%;
 }
